--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     </div>
   </div>
 </div>
-
 <!-- END NG CAROUSEL PART -->
 
 <br><br>
@@ -96,7 +95,7 @@
             <div class="collection-name">Nike</div>
           </div>
           <div class="collection-item">
-            <img src="./assets/images/AdidasLogo.png" class="img-fluid" style="margin-top: 20px;" alt="Adidas Logo">
+            <img src="./assets/images/AdidasLogo.png" class="img-fluid" alt="Adidas Logo">
             <div class="collection-name">Adidas</div>
           </div>
           <div class="collection-item">
@@ -448,12 +447,6 @@
 <!-- END NG REGISTER MODAL -->
 <!-- END NG WEBSITE CONTENT -->
 
-<!-- BACK TO TOP BUTTON -->
-<button type="button" class="btn btn-warning btn-floating btn-lg" id="btn-back-to-top">
-  <i class="fa-solid fa-arrow-up"></i>
-</button>
-<!-- END NG BACK TO TOP BUTTON -->
-
 <!-- START NG FOOTER -->
 <div id="footer" class="section"></div>
 <footer class="bg-dark text-white py-4">
@@ -505,7 +498,6 @@
 <!-- SCRIPT LINKS -->
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-<script src="https://kit.fontawesome.com/850a6f41ca.js" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
