--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- END NG CSS LINKS -->
 </head>
-<body class="loaded">
 
+<body class="loaded">
 <!-- NAVBAR PART -->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-custom fixed-top">
   <div class="container">
@@ -64,53 +64,65 @@
 </div>
 <!-- END NG CAROUSEL PART -->
 
+
 <br><br>
+
+<div id="featured-heading" class="section"></div>
+<!-- TITLE QUOTE -->
+<div id="titledQuote">
+  <center>
+  <h2 id="texttitleQuote">THE ONLY WAY TO WIN IS TO OUTWORK EVERYBODY ELSE</h2>
+  </center>
+</div>
+<!-- END NG TITLE QUOTE -->
+
 
 <!-- WEBSITE CONTENT -->
 <div id="featured-heading" class="section"></div>
 <div class="container" data-aos="zoom-in">
   <div class="my-5">
     <div class="row">
-      <div class="col-md-12">     
+      <div class="col-md-12">    
         <center>
-          <h1>Stepping into style is just the beginning<br>where every pair tells a story</h1>
           <br>
-          <h2>THE ONLY WAY TO WIN IS TO OUTWORK EVERYBODY ELSE.</h2>
+          <h1 id="textwebContent">Stepping into style is just the beginning where every pair tells a story.</p>
         </center>
       </div>
     </div>
-    <br>
     <div class="row">
       <div class="col-md-12 text-center">
         <button class="btn btn-dark">SHOP NOW</button>
       </div>
 
+
       <br><br><br><br>
 
+
       <div class="featured-brands">
-        <h1>Featured Brands</h1>
+        <h1 style="margin-left:8px">Featured Brands</h1>
         <div class="collections">
           <div class="collection-item">
             <img src="./assets/images/NikeLogo.png" class="img-fluid" alt="Nike Logo">
             <div class="collection-name">Nike</div>
           </div>
           <div class="collection-item">
-            <img src="./assets/images/AdidasLogo.png" class="img-fluid" alt="Adidas Logo">
-            <div class="collection-name">Adidas</div>
+            <img src="./assets/images/AdidasLogo.png" class="img-fluid" style="margin-top: 20px;" alt="Adidas Logo">
+            <div class="collection-name" style="margin-top: -12px;">Adidas</div>
           </div>
           <div class="collection-item">
             <img src="./assets/images/ConverseLogo.png" class="img-fluid" style="margin-top: 28px;" alt="Converse Logo">
-            <div class="collection-name" style="margin-top: -20px;">Converse</div>
+            <div class="collection-name" style="margin-top: -19px;">Converse</div>
           </div>
           <div class="collection-item">
             <img src="./assets/images/WorldBalLogo.png" class="img-fluid" style="margin-top: 50px;"  alt="World Balance Logo">
-            <div class="collection-name" style="margin-top: -45px;">World Balance</div>
+            <div class="collection-name" style="margin-top: -43px;">World Balance</div>
           </div>
         </div>
       </div>    
     </div>
   </div>
 </div>
+
 
 <br><br><br><br><br><br><br>
 
